src/index.css
@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");

:root {
  /* Dark */
  --background: hsl(222.2 84% 4.9%);
  --foreground: hsl(210 40% 98%);
  --card: hsl(222.2 84% 4.9%);
  --card-foreground: hsl(210 40% 98%);
  --popover: hsl(222.2 84% 4.9%);
  --popover-foreground: hsl(210 40% 98%);
  --primary: hsl(217.2 91.2% 59.8%);
  --primary-foreground: hsl(222.2 47.4% 11.2%);
  --secondary: hsl(217.2 32.6% 17.5%);
  --secondary-foreground: hsl(210 40% 98%);
  --muted: hsl(217.2 32.6% 17.5%);
  --muted-foreground: hsl(215 20.2% 65.1%);
  --accent: hsl(217.2 32.6% 17.5%);
  --accent-foreground: hsl(210 40% 98%);
  --destructive: hsl(0 62.8% 30.6%);
  --destructive-foreground: hsl(210 40% 98%);
  --border: hsl(217.2 32.6% 17.5%);
  --input: hsl(217.2 32.6% 17.5%);
  --ring: hsl(224.3 76.3% 48%);
}

*,
::after,
::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--background);
  color: #333;
  font-family: "Quicksand", sans-serif;
}

.app {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto 1fr auto;
  height: 100vh;
  width: 100%;
}

h1 {
  background-color: var(--primary);
  font-family: "Monoton";
  font-size: clamp(2em, 5vw, 5em);
  font-weight: 400;
  letter-spacing: 1px;
  padding: 0.3em 0.1em;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 0.2em;
}

ul {
  list-style-type: none;
}

.add-post-wrapper {
  background-color: whitesmoke;
  border-radius: 0.5em;
  color: var(--primary);
  display: flex;
  flex-direction: column;
  grid-row: 1/3;
  height: fit-content;
  margin: 1em 0 1em 1em;
  max-width: 100%;
  padding: 2rem;
}

.add-post-wrapper h2 {
  align-items: center;
  color: var(--background);
  display: flex;
  font-size: 2.3rem;
  font-weight: bold;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  padding: 0.2em 0;
  text-transform: uppercase;
}

.btn {
  background-color: var(--ring);
  border-radius: 0.3rem;
  border: 0;
  color: var(--foreground);
  cursor: pointer;
  font-size: 0.9em;
  font-weight: bold;
  padding: 1rem 1.3rem;
  text-transform: uppercase;
  transition: background-color 0.3s ease;
}

.author-input {
  width: 80%;
}

.title-input {
  width: 100%;
}

.content-input {
  width: 100%;
  margin-bottom: 1em;
}

.content {
  font-weight: bold;
}

.add-post-wrapper form > div {
  display: flex;
  justify-content: flex-end;
}

.btn:hover {
  background-color: var(--primary);
}

input,
textarea,
select {
  background-color: var(--muted-foreground);
  border-radius: 0.3rem;
  border: 1px solid var(--border);
  color: var(--popover-foreground);
  cursor: pointer;
  font-family: inherit;
  font-weight: 700;
  margin: 0.7em 0;
  padding: 0.8em;
}

select {
  text-transform: uppercase;
}

input {
  font-size: 1em;
}

input:focus,
textarea:focus {
  border: 0;
  outline: 1px solid var(--border);
}

.add-post-wrapper label {
  display: block;
  font-weight: 800;
}

input::placeholder,
textarea::placeholder {
  font-size: 0.8rem;
}

.form-filter-posts {
  display: grid;
  grid-gap: 1em;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 0.1fr 1fr;
  margin-bottom: 1em;
}

.filter-actions {
  align-items: center;
  background-color: var(--primary-foreground);
  border-radius: 0.5em;
  color: white;
  display: flex;
  grid-column: 2/3;
  grid-row: 1/2;
  justify-content: space-between;
  margin: 1em 1em 0em 0;
  padding: 0.5em 2em;
}

.filter-actions .btn {
  padding: 0.8rem 2.4rem;
  margin: 0 1em;
}

.filter-actions .clear-all {
  padding: 0.8rem 1em;
}

.blog-posts {
  background-color: var(--muted-foreground);
  border-radius: 0.5em;
  display: grid;
  grid-column: 2/3;
  grid-row: 2/3;
  margin-right: 1em;
  max-height: 72vh;
  overflow-y: scroll;
  padding: 1rem 2rem;
}

.blog-post {
  background-color: var(--destructive-foreground);
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  cursor: pointer;
  height: fit-content;
  margin: 1em 0;
  padding: 2em;
  transition: transform 0.3s ease;
}

.blog-post > div {
  display: flex;
  justify-content: flex-end;
}

.blog-post:hover {
  transform: translateY(-5px);
}

.blog-post h2 {
  color: var(--card);
  font-size: 1.8rem;
  margin-bottom: 10px;
  text-align: center;
}

.blog-post p {
  color: #666666;
  line-height: 1.6;
  margin-bottom: 15px;
  text-align: center;
}

.blog-post button {
  background-color: var(--ring);
  border-radius: 4px;
  border: none;
  color: var(--foreground);
  cursor: pointer;
  display: flex;
  max-width: 7em;
  padding: 10px 20px;
  transition: background-color 0.3s ease;
}

.author {
  color: var(--primary);
}

.blog-post button:hover {
  background-color: var(--primary-foreground);
}

.close {
  color: #f44336;
  cursor: pointer;
  font-size: 0.9em;
  transition: color 0.3s ease;
}

.close:hover {
  color: #5a3e2b;
}

.error-message {
  color: red;
  font-weight: 800;
  margin: 0.5em 0;
  text-align: right;
}

@media screen and (max-width: 800px) {
  .form-filter-posts {
    grid-template-columns: 1fr;
    grid-template-rows: 0.1fr 1fr auto;
  }

  .filter-actions {
    border-radius: 0;
    grid-column: 1/2;
    grid-row: 1/2;
    margin-right: 0;
    padding: 0.5em 0;
    padding: 0.5em;
  }

  .blog-posts {
    border-radius: 0;
    grid-column: 1/2;
    grid-row: auto;
    margin-right: 0;
    min-height: max-content;
    padding: 0;
  }

  .blog-post {
    border-radius: 0;
  }

  .blog-post:hover {
    transform: translateY(0px);
  }

  .add-post-wrapper {
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .filter-actions .btn {
    margin: 0.3em;
    padding: 0.8em;
  }

  select {
    max-width: 9em;
  }

  .add-post-wrapper {
    border-radius: 0;
    margin: 0;
    padding: 0.8em;
  }
}

